- Fixed form line-height on iOS - Fixed Instagram link tile collapsing on iOS

--- a/assets/styles/layouts/_instagram-feed.scss
+++ b/assets/styles/layouts/_instagram-feed.scss
@@ -42,8 +42,6 @@
 
       &.instagram {
         @include center-contents();
-        flex: 1;
-        max-width: none;
 
         .logo-instagram,
         .logo-instagram path {
