--- a/assets/styles/mixins-utilities/_forms.scss
+++ b/assets/styles/mixins-utilities/_forms.scss
@@ -8,7 +8,7 @@ form {
     border: 2px solid transparent;
     font-size: 1.8rem;
     height: 6rem;
-    line-height: 1;
+    line-height: 6rem;
     outline: none;
     padding: 7px 2rem 0;
     transition: $transition-default;
